--- a/back/src/Chatbot.Data/Chatbot.Data.csproj
+++ b/back/src/Chatbot.Data/Chatbot.Data.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Chatbot.Common\Chatbot.Common.csproj" />
     <ProjectReference Include="..\Chatbot.Model\Chatbot.Model.csproj" />
   </ItemGroup>
 
