Настройка ef и бд

--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Data Source=.;Initial Catalog=Chatbot;Integration Security=true;Application Name=ChatbotApp"
+    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
   }
 }
