--- a/back/src/Chatbot.Ef.Data/Chatbot.Ef.Data.csproj
+++ b/back/src/Chatbot.Ef.Data/Chatbot.Ef.Data.csproj
@@ -2,15 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp5.0</TargetFramework>
-        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\Chatbot.Abstractions\Chatbot.Abstractions.csproj" />
+      <ProjectReference Include="..\Chatbot.Ef\Chatbot.Ef.csproj" />
     </ItemGroup>
 
 </Project>
