--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -8,5 +8,9 @@
   },
   "ConnectionStrings": {
     "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
+  },
+  "Token": {
+    "Lifetime": 24,
+    "AutoExpired": 30
   }
 }
