--- a/back/src/Chatbot.Abstractions/Chatbot.Abstractions.csproj
+++ b/back/src/Chatbot.Abstractions/Chatbot.Abstractions.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\Chatbot.Model\Chatbot.Model.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Enums" />
+    </ItemGroup>
+
 </Project>
