реализация работы хабов, отправки сообщений на сервер

--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -13,5 +13,6 @@
     "Lifetime": 24,
     "AutoExpired": 30
   },
-  "BaseUrl": "http://localhost:5011"
+  "BaseUrl": "http://localhost:5011",
+  "ChatbotUrl": "http://localhost:4201",
 }
