--- a/back/src/Chatbot.Hosting/appsettings.json
+++ b/back/src/Chatbot.Hosting/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseUrl": "http://localhost:5011"
+  "BaseUrl": "http://localhost:5011",
+  "ChatbotUrl": "http://localhost:4201"
 }
