--- a/front/ChatBot/package.json
+++ b/front/ChatBot/package.json
@@ -1,9 +1,9 @@
 {
   "name": "chat-bot",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "build": "ng build",
     "build:prod": "ng build --prod --progress --optimization",
     "test": "ng test",
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@microsoft/signalr": "^5.0.1",
+    "@types/uuid": "^8.3.0",
     "classlist.js": "^1.1.20150312",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
