--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -7,10 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp",
-    "PostgresConnection": "Host=localhost;Username=postgres;Password=1;Command Timeout=1200;Timeout=60"
+    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
   },
-  "Provider": "PostgreSql",
   "Token": {
     "Lifetime": 24,
     "AutoExpired": 30
