--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -7,12 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
+//    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
+    "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
   },
   "Token": {
     "Lifetime": 24,
     "AutoExpired": 30
   },
   "BaseUrl": "http://localhost:5011",
-  "ChatbotUrl": "http://localhost:4201",
+  "ChatbotUrl": "http://localhost:4201"
 }
