--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-//    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp"
-    "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
+    "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp",
+//    "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
   },
   "Token": {
     "Lifetime": 24,
