--- a/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
+++ b/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
@@ -23,6 +23,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="NLog" Version="4.7.6" />
       <PackageReference Include="NLog.Config" Version="4.7.6" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
     </ItemGroup>
 
     <ItemGroup>
