исправлена ошибка обновления диалога

--- a/back/src/Chatbot.Hosting/appsettings.json
+++ b/back/src/Chatbot.Hosting/appsettings.json
@@ -7,6 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseUrl": "http://localhost:5011",
-  "ChatbotUrl": "http://localhost:4201"
+  "Token": {
+    "Lifetime": 24,
+    "AutoExpired": 30
+  }
 }
