--- a/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
+++ b/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
@@ -49,6 +49,9 @@
       <None Update="wwwroot\index.html">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="appsettings.prod.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
