--- a/lk/package.json
+++ b/lk/package.json
@@ -23,6 +23,7 @@
     "@microsoft/signalr": "^5.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
