--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -2,6 +2,5 @@
   "ConnectionStrings": {
     "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp",
   },
-  "BaseUrl": "http://localhost:5011",
-  "ChatbotUrl": "http://localhost:4201"
+  "BaseUrl": "http://localhost:5011"
 }
