--- a/back/src/Chatbot.Hosting/appsettings.prod.json
+++ b/back/src/Chatbot.Hosting/appsettings.prod.json
@@ -2,6 +2,5 @@
   "ConnectionStrings": {
     "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
   },
-  "BaseUrl": "http://188.225.58.232:5021",
-  "ChatbotUrl": "http://localhost:4201"
+  "BaseUrl": "http://188.225.58.232:5021"
 }
