--- a/front/ChatBot/package.json
+++ b/front/ChatBot/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4201",
-    "build": "ng build",
-    "build:prod": "ng build --prod --progress --optimization",
+    "build": "ng build --prod --progress --optimization",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
