Новая модель взаимодействия страниц

--- a/front/ChatBot/angular.json
+++ b/front/ChatBot/angular.json
@@ -43,7 +43,11 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": {
+                "fonts": true,
+                "scripts": true,
+                "styles": true
+              },
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
