настройки для Https

--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -2,5 +2,20 @@
   "ConnectionStrings": {
     "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp",
   },
-  "BaseUrl": "http://localhost:5011"
+  "HttpServer":{
+    "Endpoints":{
+      "Http":{
+        "Host": "localhost",
+        "Port": 5011,
+        "Scheme": "http"
+      },
+      "Https":{
+        "Host": "localhost",
+        "Port": 45011,
+        "Scheme": "https",
+        "StoreName": "My",
+        "StoreLocation": "CurrentUser"
+      }
+    }
+  }
 }
