--- a/back/src/Chatbot.Hosting/appsettings.prod-hub.json
+++ b/back/src/Chatbot.Hosting/appsettings.prod-hub.json
@@ -2,5 +2,20 @@
     "ConnectionStrings": {
         "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
     },
-    "BaseUrl": "http://188.225.58.232:5022"
+    "HttpServer":{
+        "Endpoints":{
+            "Http":{
+                "Host": "localhost",
+                "Port": 5022,
+                "Scheme": "http"
+            },
+            "Https":{
+                "Host": "localhost",
+                "Port": 45022,
+                "Scheme": "https",
+                "StoreName": "My",
+                "StoreLocation": "CurrentUser"
+            }
+        }
+    }
 }
