Настройки SSL + баги

--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -7,14 +7,16 @@
       "Http":{
         "Host": "localhost",
         "Port": 5011,
-        "Scheme": "http"
+        "Scheme": "http",
+        "CorsOrigins": "http://*:4200"
       },
       "Https":{
         "Host": "localhost",
         "Port": 45011,
         "Scheme": "https",
-        "StoreName": "My",
-        "StoreLocation": "CurrentUser"
+        "CorsOrigins": "https://*:4200",
+        "FilePath": "../../../../../../ssl/localhost.pfx",
+        "Password": "1"
       }
     }
   }
