--- a/back/src/Chatbot.Hosting/appsettings.prod-hub.json
+++ b/back/src/Chatbot.Hosting/appsettings.prod-hub.json
@@ -5,16 +5,18 @@
     "HttpServer":{
         "Endpoints":{
             "Http":{
-                "Host": "localhost",
+                "Host": "188.225.58.232",
                 "Port": 5022,
-                "Scheme": "http"
+                "Scheme": "http",
+                "CorsOrigins": "http://*:4201"
             },
             "Https":{
-                "Host": "localhost",
+                "Host": "188.225.58.232",
                 "Port": 45022,
                 "Scheme": "https",
-                "StoreName": "My",
-                "StoreLocation": "CurrentUser"
+                "FilePath": "localhost.pfx",
+                "Password": "1",
+                "CorsOrigins": "https://*:4201"
             }
         }
     }
