--- a/lk/package.json
+++ b/lk/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
     "@angular/material": "^11.0.3",
+    "@angular/material-moment-adapter": "^11.2.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@microsoft/signalr": "^5.0.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
