--- a/lk/package.json
+++ b/lk/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.1",
     "@microsoft/signalr": "^5.0.1",
     "moment": "^2.29.1",
+    "ngx-build-plus": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
