--- a/front/ChatBot/package.json
+++ b/front/ChatBot/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@microsoft/signalr": "^5.0.1",
+    "angular-imask": "^6.0.7",
     "classlist.js": "^1.1.20150312",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
