--- a/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
+++ b/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Autofac" Version="6.1.0" />
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
       <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="EPPlus" Version="4.5.3.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1">
         <PrivateAssets>all</PrivateAssets>
