--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -5,7 +5,7 @@
   "HttpServer":{
     "Endpoints":{
       "Http":{
-        "Host": "localhost",
+        "Host": "192.168.1.163",
         "Port": 5011,
         "Scheme": "http",
         "CorsOrigins": "http://*:4200"
