--- a/front/ChatBot/package.json
+++ b/front/ChatBot/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4201",
+    "start": "ng serve --host 192.168.1.163 --port 4201",
     "build": "ng build --prod --progress --optimization",
     "test": "ng test",
     "lint": "ng lint",
