--- a/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
+++ b/back/src/Chatbot.Hosting/Chatbot.Hosting.csproj
@@ -20,7 +20,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="NLog" Version="4.7.6" />
       <PackageReference Include="NLog.Config" Version="4.7.6" />
@@ -29,6 +29,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Chatbot.Common\Chatbot.Common.csproj" />
+      <ProjectReference Include="..\Chatbot.Ef.Statistics\Chatbot.Ef.Statistics.csproj" />
       <ProjectReference Include="..\Chatbot.Ef\Chatbot.Ef.csproj" />
       <ProjectReference Include="..\Chatbot.Ioc\Chatbot.Ioc.csproj" />
     </ItemGroup>
