--- a/back/src/Chatbot.Hosting/appsettings.Development.json
+++ b/back/src/Chatbot.Hosting/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "default": "Data Source=.;Initial Catalog=Chatbot;Integrated Security=true;Application Name=ChatbotApp",
+    "Stat": "Data Source=.;Initial Catalog=ChatbotStat;Integrated Security=true;Application Name=ChatbotStatApp"
   },
   "HttpServer":{
     "Endpoints":{
