--- a/back/src/Chatbot.Hosting/appsettings.prod.json
+++ b/back/src/Chatbot.Hosting/appsettings.prod.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp"
+    "default": "Data Source=.\\SqlExpress;Initial Catalog=Chatbot;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotApp",
+    "Stat": "Data Source=.\\SqlExpress;Initial Catalog=ChatbotStat;User Id=sa;Password=D(IaaY6Oari6;Application Name=ChatbotStatApp"
   },
   "HttpServer":{
     "Endpoints":{
